--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.native.ignoreDisabledTargets=true
+sqlDelightVersion=1.4.2
