--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.moviesapp.androidApp">
 
     <application
+            android:usesCleartextTraffic="true"
             android:allowBackup="false"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
